--- a/src/layouts/components/Notification/Notification.module.scss
+++ b/src/layouts/components/Notification/Notification.module.scss
@@ -197,16 +197,19 @@
     padding: 0.5rem;
     background-color: var(--secondary-color);
     border-radius: 0.5rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .notification-voucher-link {
     display: flex;
     align-items: center;
     gap: 1rem;
-    text-overflow: ellipsis;
 }
 
 .notification-voucher-image {
+    flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -221,14 +224,14 @@
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .voucher-notification-content-code {
     color: var(--text-color);
     font-weight: 400;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 .voucher-notification-content-link {
